@@ -50,6 +50,7 @@ export(each)
 export(empty)
 export(eval.quoted)
 export(failwith)
+export(here)
 export(id)
 export(idata.frame)
 export(is.discrete)
